--- a/templates/site1.html
+++ b/templates/site1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-            <img id="imglogo"  src="img/imglogoaero-removebg-preview.png" alt="">
+            <img id="imglogo" src="/static/img/imglogoaero.png" alt="">
     </header>
     <main>
         <div id="divespaco">
