--- a/templates/site2.html
+++ b/templates/site2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-            <img id="imglogo"  src="img/channels4_profile-removebg-preview.png" alt="">
+            <img id="imglogo" src="/static/img/channels4_profile-removebg-preview.png" alt="">
             <nav>
                 <ul>
                     <li>
@@ -29,51 +29,51 @@
 
             <div class="container">
                 <div class="image" style="padding: 0;">
-                    <img src="img/sobre a cidade-1.png" alt="" width="200000000
+                    <img src="/static/img/sobre%20a%20cidade-1.png" alt="" width="200000000
                     px" height="">
                 </div>
             </div>
 
             <div id="container2" class="container">
                 <div class="image" style="padding: 0;">
-                    <img src="img/tradição e inovação-2.png" alt="" width="200000000
+                    <img src="/static/img/tradição%20e%20inovação-2.png" alt="" width="200000000
                     px" height="">
                 </div>
             </div>
 
             <div class="container">
                 <div class="image" style="padding: 0;">
-                    <img src="img/reconhecimento-3.png" alt="" width="200000000
+                    <img src="/static/img/reconhecimento-3.png" alt="" width="200000000
                     px" height="">
                 </div>
                 <div class="imagens">
-                    <img class="bola" src="img/inpi.png" alt="">
-                    <img src="img/selo sinbi.png" alt="">
+                    <img class="bola" src="/static/img/inpi.png" alt="">
+                    <img src="/static/img/selo%20sinbi.png" alt="">
                 </div>
             </div>
 
             <div class="container">
                 <div class="image" style="padding: 0;">
-                    <img src="img/Indicação geografica-4.png" alt="" width="200000000
+                    <img src="/static/img/Indicação%20geografica-4.png" alt="" width="200000000
                     px" height="">
                 </div>
             </div>
 
             <div class="container">
                 <div class="image" style="padding: 0;">
-                    <img src="img/selo-5.png" alt="" width="200000000
+                    <img src="/static/img/selo-5.png" alt="" width="200000000
                     px" height="">
                 </div>
                 <div id="arruma">
                     <div class="imagens" id="imagens2">
                         <div id="gap">
-                            <img src="img/sel3.png" alt="">
-                            <img src="img/sel4.png" alt="">
-                            <img src="img/sel5.png" alt="">
+                            <img src="/static/img/sel3.png" alt="">
+                            <img src="/static/img/sel4.png" alt="">
+                            <img src="/static/img/sel5.png" alt="">
                         </div>
                         <div id="arruma" class="gap">
-                            <img src="img/sel1.png" alt="">
-                            <img src="img/sel2.png" alt="">
+                            <img src="/static/img/sel1.png" alt="">
+                            <img src="/static/img/sel2.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
     <footer>
         <div class="container">
             <div class="image" style="padding: 0;">
-                <img src="img/Volte sempre!!!.png" alt="" width="200000000
+                <img src="/static/img/Volte%20sempre!!!.png" alt="" width="200000000
                 px" height="">
             </div>
         </div>
