--- a/templates/site3.html
+++ b/templates/site3.html
@@ -62,8 +62,8 @@
 
         <div class="row amarelo pt-3 pb-3">
             <div class="col-12 d-flex justify-content-around" style="flex-wrap: wrap;">
-                <img class="img-click my-3" src="img/Frame 4 (1).png" alt="">
-                <img class="img-click my-3" src="img/Frame 5 (1).png" alt="">
+                <img class="img-click my-3" src="/static/img/Frame 4 (1).png" alt="">
+                <img class="img-click my-3" src="/static/img/Frame 5 (1).png" alt="">
             </div>
 
             <script>
@@ -79,7 +79,7 @@
 
         <div id="l1" class="tudo3 row pt-3 pb-4 text-center" style="background-color: #f4f4f8;" >
             <div class="col-md-3" id="ti">
-                <img class="img-click my-3" src="img/lanche1.png" alt=""  style="width: 290px">
+                <img class="img-click my-3" src="/static/img/lanche1.png" alt=""  style="width: 290px">
             </div>
 
             <div class="col-md-6 px-4">
@@ -105,7 +105,7 @@
 
         <div id="l2" class="tudo3 row pt-3 pb-4 text-center" style="background-color: #f8f1d3;" >
             <div class="col-md-3">
-                <img class="img-click my-3" src="img/lanche2.png" alt=""  style="width: 290px">
+                <img class="img-click my-3" src="/static/img/lanche2.png" alt=""  style="width: 290px">
             </div>
 
             <div class="col-md-6 px-4">
@@ -132,7 +132,7 @@
 
         <div id="c1" class="tudo4 row pt-3 pb-4 text-center" style="background-color: #f4f4f8;" >
             <div class="col-md-3">
-                <img class="img-click my-3" src="img/lanche3.png" alt=""  style="width: 290px">
+                <img class="img-click my-3" src="/static/img/lanche3.png" alt=""  style="width: 290px">
             </div>
 
             <div class="col-md-6 px-4">
@@ -197,20 +197,20 @@
                 <p class="verde"><b>SEGUE A <br>
                     G E N T E !</b> </p>
                     <div class="divmae">
-                        <p class="insta"><img src="img/insta.png" alt="">  estacaolanche</p>
-                        <p class="insta"><img src="img/youtube 1 (1).png" alt="">  estacaolanchetv</p>
-                        <p class="insta"><img src="img/ttk.png" alt="">  estacaolanche</p>
+                        <p class="insta"><img src="/static/img/insta.png" alt="">  estacaolanche</p>
+                        <p class="insta"><img src="/static/img/youtube 1 (1).png" alt="">  estacaolanchetv</p>
+                        <p class="insta"><img src="/static/img/ttk.png" alt="">  estacaolanche</p>
                     </div>
             </div>
             <div class="col-7">
                 <div class="row">
-                    <div class="col-6 imagem" hover="img1()"  id="img1"style="background-image: url(img/img1final.jpeg); "></div>
-                    <div class="col-6 imagem"  hover="img2()"id="img2"style="background-image: url(img/img2final.jpeg);"></div>
+                    <div class="col-6 imagem" hover="img1()"  id="img1"style="background-image: url(/static/img/img1final.jpeg); "></div>
+                    <div class="col-6 imagem"  hover="img2()"id="img2"style="background-image: url(/static/img/img2final.jpeg);"></div>
                 </div>
                 <div class="row" >
-                    <div class="col-4 imagem-p" hover="img3()" id="img3" style="background-image: url(img/img3final.jpeg);"> </div>
-                    <div class="col-4 imagem-p"  hover="img4()" id="img4"style="background-image: url(img/img4final.jpeg);"></div>
-                    <div class="col-4 imagem-p"   hover="img5()"id="img5" style="background-image: url(img/img5final.jpeg);"></div>
+                    <div class="col-4 imagem-p" hover="img3()" id="img3" style="background-image: url(/static/img/img3final.jpeg);"> </div>
+                    <div class="col-4 imagem-p"  hover="img4()" id="img4"style="background-image: url(/static/img/img4final.jpeg);"></div>
+                    <div class="col-4 imagem-p"   hover="img5()"id="img5" style="background-image: url(/static/img/img5final.jpeg);"></div>
                 </div>
             </div>
             <div class="col-1"></div>
