--- a/static/style1.css
+++ b/static/style1.css
@@ -48,7 +48,7 @@ nav a:hover {
 }
 
 .banner {
-    background-image: url("img/imgaero");
+    background-image: url("/static/img/imgaero1.jpg");
     background-size: cover;
     height: 497px;
     display: flex;
@@ -56,7 +56,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #fff;
+    color: #000000;
 }
 
 .banner h1 {
